<resources>
    <string name="app_name">SiGeSe Móvil</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Configuración</string>
    <string name="List_Polizas">Pólizas</string>
    <string name="List_Clientes">Clientes</string>
    <string name="List_Empresas">Empresas</string>
    <string name="List_Equipos">prueba</string>
    <string name="title_activity_equipo_list">EquipoListActivity</string>

    <string name="id_label">The ID is</string>
    <string name="id_value">[id]</string>
    <string name="content_label">The Content is</string>
    <string name="content_value">[content]</string>
    <string name="action_refresh">Refresh</string>

    <string name="title_activity_actions_list">ActionsListActivity</string>
    <string name="actionlist_title">Action List</string>
    <string name="equipo_marca_label">Marca:</string>
    <string name="equipo_modelo_label">Modelo:</string>
    <string name="equipo_imei_label">IMEI:</string>

    <string name="cliente_apellido_label">Apellido:</string>
    <string name="cliente_nombre_label">Nombre:</string>
    <string name="cliente_dni_label">DNI:</string>
    <string name="cliente_tipo_dni_label">Tipo DNI:</string>
    <string name="cliente_direccion_label">Dirección:</string>
    <string name="cliente_telefono_label">Teléfono:</string>
    <string name="cliente_fecha_nacimeiento_label">Fecha nacimiento:</string>
    <string name="cliente_localidad_label">Localidad:</string>

    <string name="empresa_razon_social_label">Razón social:</string>
    <string name="empresa_cuit_cuil_label">Cuit:</string>
    <string name="empresa_direccion_label">Dirección:</string>
    <string name="empresa_localidad_label">Localidad:</string>
    <string name="empresa_mail_label">Mail:</string>
    <string name="empresa_telefono_label">Teléfono:</string>

    <string name="poliza_numero_label">Póliza número:</string>
    <string name="poliza_importe_total_label">Póliza importe total:</string>
    <string name="poliza_compania_label">Póliza compañía:</string>
    <string name="poliza_cliente_label">Póliza cliente:</string>
    <string name="poliza_fecha_emision_label">Fecha emisión:</string>
    <string name="poliza_fecha_vigencia_label">Fecha vigencia:</string>
    <string name="poliza_fecha_vencimiento_label">Fecha vencimiento:</string>
    <string name="poliza_dias_restantes_label">Días restantes para vencer:</string>



</resources>
