<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.pacinetes.sigesemovil.Actividad.PolizaDetalleActivity"
    android:background="@color/Fondo">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/poliza_numero_label"
        android:id="@+id/textView_poliza_numero_label"
        android:textColor="@color/Etiquetas"
        android:layout_marginTop="39dp"
        android:layout_below="@+id/textView_poliza_cliente"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textView_poliza_numero"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="@color/TextoUsuario"
        android:layout_alignBottom="@+id/textView_poliza_numero_label" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/poliza_importe_total_label"
        android:id="@+id/textView_poliza_importe_total_label"
        android:textColor="@color/Etiquetas"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView_poliza_numero_label" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textView_poliza_importe_total"
        android:textColor="@color/TextoUsuario"
        android:layout_alignBaseline="@+id/textView_poliza_importe_total_label"
        android:layout_alignBottom="@+id/textView_poliza_importe_total_label"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/poliza_compania_label"
        android:id="@+id/textView_poliza_compania_label"
        android:textColor="@color/Etiquetas"
        android:layout_below="@+id/textView_poliza_importe_total_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textView_poliza_compania"
        android:textColor="@color/TextoUsuario"
        android:layout_alignBaseline="@+id/textView_poliza_compania_label"
        android:layout_alignBottom="@+id/textView_poliza_compania_label"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/textView_poliza_cliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/TextoTituloDetalle"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/textView_poliza_numero"
        android:layout_alignEnd="@+id/textView_poliza_numero"
        android:layout_marginTop="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textView_poliza_estado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/TextoEstadoDetalle"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/poliza_fecha_emision_label"
        android:id="@+id/textView_poliza_fecha_emision_label"
        android:textColor="@color/Etiquetas"
        android:layout_below="@+id/textView_poliza_compania_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textView_poliza_fecha_emision"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="@color/TextoUsuario"
        android:layout_alignBottom="@+id/textView_poliza_fecha_emision_label" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/poliza_fecha_vigencia_label"
        android:id="@+id/textView_poliza_fecha_vigencia_label"
        android:textColor="@color/Etiquetas"
        android:layout_below="@+id/textView_poliza_fecha_emision"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textView_poliza_fecha_vigencia"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="@color/TextoUsuario"
        android:layout_alignBottom="@+id/textView_poliza_fecha_vigencia_label" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/poliza_fecha_vencimiento_label"
        android:id="@+id/textView_poliza_fecha_vencimiento_label"
        android:textColor="@color/Etiquetas"
        android:layout_below="@+id/textView_poliza_fecha_vigencia"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textView_poliza_fecha_vencimiento"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="@color/TextoUsuario"
        android:layout_alignBottom="@+id/textView_poliza_fecha_vencimiento_label" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/poliza_dias_restantes_label"
        android:id="@+id/textView_poliza_dias_restantes_label"
        android:textColor="@color/Etiquetas"
        android:layout_below="@+id/textView_poliza_fecha_vencimiento"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textView_poliza_dias_restantes"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="@color/TextoUsuario"
        android:layout_alignBottom="@+id/textView_poliza_dias_restantes_label" />



</RelativeLayout>